# room-booking

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  logging.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
.github/workflows/: build-docker.yaml  pre-commit.yaml
deploy/: Dockerfile
scripts/: prepare.py
src/: config_schema.py
src/api/: __main__.py  app.py  dependencies.py  docs.py  exceptions.py  lifespan.py  routers.py
src/modules/: inh_accounts_sdk.py  innohassle_accounts.py
src/modules/auth/: dependencies.py
src/modules/bmp/: repository.py  routes.py
src/modules/bookings/: booking_status_daemon.py  caching.py  categories.py  exchange_repository.py  my_uni_repository.py  outlook_ics_repository.py  patch_exchangelib.py  recently.py  recurrence.py  repository.py  routes.py  schemas.py  service.py  single_flight.py  tz_utils.py
src/modules/rooms/: repository.py  routes.py
src/modules/rules/: _check_manually.py  service.py
src/modules/tokens/: repository.py
tests/: test_cache_invalidation.py  test_categories.py  test_exchange_repository.py  test_recently.py  test_rules_service.py  test_service_cache.py  test_single_flight.py
tests/modules/bookings/: test_service_cache.py
