[tool.poetry]
name = "innohassle-room-booking"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
authlib = "^1.4.1"
colorlog = "^6.8.2"
cryptography = "^44.0.0"
exchangelib = "^5.4.3"
fastapi = "^0.115.8"
fastapi-swagger = "^0.2.6"
gunicorn = "^23.0.0"
httpx = {version = "^0.28.1"}
pre-commit = "^4.1.0"
pydantic = "^2.10.6"
pytz = "^2025.1"
pyyaml = "^6.0.2"
requests-curl = {git = "https://github.com/paivett/requests-curl.git", rev = "82a7fc1"}
ruff = "^0.9.5"
uvicorn = "^0.34.0"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR"
]
lint.extend-select = ["I", "UP", "PL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
