[project]
name = "room-booking"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "authlib>=1.6.5",
    "beanie>=2.0.1",
    "colorlog>=6.8.2",
    "cryptography>=43.0.1",
    "exchangelib>=5.4.3",
    "fastapi>=0.115.0",
    "fastapi-swagger>=0.2.3",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "pre-commit>=4.0.0",
    "pydantic[email]>=2.12.2",
    "pytz~=2024.2",
    "pyyaml>=6.0.2",
    "requests-curl",
    "ruff>=0.7.4",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
requests-curl = { git = "https://github.com/paivett/requests-curl.git", rev = "82a7fc1" }

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14:UserWarning:fastapi.*",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
