[project]
name = "room-booking"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "beanie>=2.1.0",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "exchangelib>=5.6.0",
    "fastapi>=0.136.1",
    "fastapi-swagger>=0.4.49",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "joserfc>=1.6.5",
    "prek>=0.3.13",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "pytz~=2026.2",
    "pyyaml>=6.0.3",
    "requests-curl",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.uv.sources]
requests-curl = { git = "https://github.com/paivett/requests-curl.git", rev = "82a7fc1" }

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14:UserWarning:fastapi.*",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
